01_first-pod/image-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # for simplicity there is only one url for all deployments in this repository
  - host: black-out.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-web-service
            port:
              number: 80
